# Proje-1

./: CMakeLists.txt
Proje Ödevi/: main.c
